# Elea

./: .gitignore  Elea.cabal  README.md
docs/: why.md
examples/: .Basic.hs.swp
examples/basic/: Basic.hs
src/: .TypeCheck.hs.swp  todo.txt
src/lib/Elea/: Prelude.hs
src/lib/Elea/App/: App.hs
src/lib/Elea/Index/: Type.hs  Val.hs
src/lib/Elea/Lang/: Apply.hs  Bang.hs  Constructor.hs  Error.hs  Lens.hs  Program.hs  Relation.hs  Synthesis.hs  System.hs  Type.hs  Types.hs  Val.hs
src/lib/Elea/Lang/Atom/: Lens.hs  Type.hs  Types.hs  Val.hs
src/lib/Elea/Lang/Atom/Index/: Type.hs  Val.hs
src/lib/Elea/Lang/Exp/: .FunTree.hs.swp  .Types.hs.swp  Action.hs  FunTree.hs  Program.hs  Query.hs  Synthesis.hs  Type.hs  Types.hs  Universe.hs  Value.hs
src/lib/Elea/Lang/Fun/: .Synthesis.hs.swp  Apply.hs  TypeTemplate.hs  ValTemplate.hs
src/lib/Elea/Lang/Impl/: Action.hs  Field.hs
src/lib/Elea/Lang/Index/: Type.hs  Val.hs  Value.hs
src/lib/Elea/Lang/Kind/: Lookup.hs  Types.hs
src/lib/Elea/Lang/Sem/: .Synthesis.hs.swp  Basic.hs  Database.hs  Interfaces.hs  Lens.hs  ParticleIndex.hs  Processor.hs  Synthesis.hs  System.hs  Transactions.hs  TypeIndex.hs  Types.hs  ValueIndex.hs
src/lib/Elea/Lang/Sem/Force/: Synthesis.hs
src/lib/Elea/Lang/Sem/Transform/: Template.hs
src/lib/Elea/Lang/Sys/: .Types.hs.swp  Act.hs  Action.hs  Construct.hs  Event.hs  Relation.hs  Synthesis.hs  System.hs  Types.hs
src/lib/Elea/Lang/System/: Search.hs
src/lib/Elea/Lang/Term/: .System.hs.swp  Basic.hs  Catalysis.hs  Contraint.hs  Force.hs  Function.hs  Identifiers.hs  Lens.hs  Synthesis.hs  System.hs  Transformer.hs  Type.hs  TypeCons.hs  Universe.hs  Value.hs
src/lib/Elea/Lang/Term/Fun/: Query.hs  Template.hs
src/lib/Elea/Lib/: Console.hs
src/lib/Elea/Web/: App.hs  System.hs
src/test/EleaTest/: Main.hs  Prelude.hs
src/test/EleaTest/Lang/Sem/: Lens.hs  TypeIndex.hs  ValueIndex.hs
src/test/Test/: Main.hs  Prelude.hs  Type.hs
src/test/Test/App/: Kios.hs  KiosOld.hs
src/test/Test/Data/: Blog.hs  Blog.old  Kios.hs  RPG.hs  System.hs  Val.hs
src/test/Test/Elea/Index/: Val.hs
src/test/Test/Elea/Lang/: .Type.hs.swp  .Types.hs.swp  Lens.hs  Synthesis.hs  Type.hs  Types.hs  Val.hs
src/test/Test/Elea/Lang/Atom/: Lens.hs  Type.hs  Val.hs
src/test/Test/Elea/Lang/Exp/: Action.hs  Query.hs  Universe.hs
src/test/Test/Elea/Lang/Index/: Type.hs  Val.hs
src/test/Test/Elea/Lang/Synth/: Synthesis.hs
