
name:           Elea
      
version:        0.0.1

license:        AllRightsReserved

license-file:   LICENSE

author:         Jeff Wise <jeff.scott.wise@gmail.com>
maintainer:     Jeff Wise <jeff.scott.wise@gmail.com>

synopsis:       Framework for construction of universes
description:	TODO

category:       Language

stability:      Experimental

cabal-version:  >= 1.8

build-type:     Simple

homepage:    	http://elea-framework.com/

		
Library

    hs-source-dirs:     src/lib
    
    ghc-options:        -Wall -fno-warn-orphans -fno-warn-missing-signatures

    exposed-modules:    Elea.Lang.Atom.Type,
                        Elea.Lang.Atom.Types,
                        Elea.Lang.Atom.Lens
                        Elea.Lang.Atom.Val,
                        Elea.Lang.Fun.Apply,
                        Elea.Lang.Index.Val,
                        Elea.Lang.Index.Type,
                        Elea.Lang.Sys.Types

    other-modules:      Elea.Prelude

    build-depends:  	base ==4.6.*,
                        containers,
                        unordered-containers,
                        text,
                        bytestring,
                        stream-fusion,
                        time,
                        lens,
                        hashable,
                        mtl,
                        stm,
                        errors
              

    extensions:		NoImplicitPrelude, OverloadedStrings, UnicodeSyntax,
                        FlexibleInstances, TemplateHaskell, DeriveGeneric


Executable testsuite


    hs-source-dirs:     src/test

    main-is:            Test/Main.hs

    other-modules:      Test.Prelude,
                        Test.Elea.Lang.Atom.Lens,
                        Test.Elea.Lang.Atom.Val,
                        Test.Elea.Lang.Atom.Type,
                        Test.Elea.Lang.Index.Type,
                        Test.Elea.Lang.Index.Val

    

    build-depends:      base ==4.6.*,
                        Elea,
                        tasty-hunit,
                        tasty,
                        containers,
                        unordered-containers,
                        tuple,
                        stream-fusion,
                        lens,
                        mtl,
                        QuickCheck,
                        text


    ghc-options:        -Wall -fno-warn-missing-signatures

    extensions:         OverloadedStrings, UnicodeSyntax, TemplateHaskell, NoImplicitPrelude


