
name:           Elea
      
version:        0.0.1

license:        AllRightsReserved

license-file:   LICENSE

author:         Jeff Wise <jeff.scott.wise@gmail.com>
maintainer:     Jeff Wise <jeff.scott.wise@gmail.com>

synopsis:       Framework for construction of universes
description:	TODO

category:       Language

stability:      Experimental

cabal-version:  >= 1.8

build-type:     Simple

homepage:    	http://elea-framework.com/

		
Library

    hs-source-dirs:     src/lib
    
    ghc-options:        -Wall -fno-warn-orphans -fno-warn-missing-signatures

    exposed-modules:    Elea.Lang.Term.Force
                        Elea.Lang.Term.Lens
                        Elea.Lang.Term.System
                        Elea.Lang.Term.Type
                        Elea.Lang.Term.Value
                        Elea.Lang.Term.Transformer
                        Elea.Lang.Sem.Processor
                        Elea.Lang.Sem.System
                        Elea.Lang.Sem.ValueIndex
                        Elea.Lang.Sem.TypeIndex
                        Elea.Lang.Sem.Types

    other-modules:      Elea.Prelude
                        Elea.Lang.Term.Identifiers
                        Elea.Lang.Sem.Lens
                        Elea.Lang.Sem.Force.Synthesis
                        Elea.Lang.Sem.Transform.Template

    build-depends:  	base ==4.6.*,
                        containers,
                        unordered-containers,
                        text,
                        transformers,
                        either,
                        bytestring,
                        stream-fusion,
                        time,
                        lens,
                        hashable,
                        mtl,
                        stm,
                        errors
              

    extensions:		NoImplicitPrelude, OverloadedStrings, UnicodeSyntax,
                        FlexibleInstances, TemplateHaskell, DeriveGeneric


Executable testsuite


    hs-source-dirs:     src/test

    main-is:            EleaTest/Main.hs

    other-modules:      EleaTest.Prelude
                        EleaTest.Lang.Sem.ValueIndex
                        EleaTest.Lang.Sem.TypeIndex
    
    build-depends:      base ==4.6.*,
                        Elea,
                        tasty-hunit,
                        tasty,
                        containers,
                        unordered-containers,
                        tuple,
                        stream-fusion,
                        lens,
                        stm,
                        mtl,
                        QuickCheck,
                        text

    ghc-options:        -Wall -fno-warn-missing-signatures

    extensions:         OverloadedStrings, UnicodeSyntax, TemplateHaskell, NoImplicitPrelude



Executable example-basic

    hs-source-dirs:     examples/basic
    
    main-is:            Basic.hs

    build-depends:      base ==4.6.*,
                        Elea,
                        unordered-containers,
                        stm,
                        text

    extensions:         OverloadedStrings, UnicodeSyntax

